--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
         run: npm install -g surge
         
       - name: Deploy website on Surge
-        run: surge ./ upset-self.surge.sh/ --token ${{secrets.TEST_SURGE_TOKEN}}        
+        run: surge ./ testaqsa.surge.sh/ --token ${{secrets.TEST_SURGE_TOKEN}}        
